--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -3,18 +3,18 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: spitul <spitul@student.42berlin.de>        +#+  +:+       +#+         #
+#    By: spitul <spitul@student.42berlin.de >       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/13 17:47:50 by spitul            #+#    #+#              #
-#    Updated: 2025/07/04 08:34:06 by spitul           ###   ########.fr        #
+#    Updated: 2025/07/11 16:23:41 by spitul           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = 
+SRC = ScalarConverter.cpp
 OBJ = $(addprefix obj/, $(SRC:.cpp=.o))
 CC = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic
-HEADERS = 
+HEADERS = ScalarConverter.hpp
 
 NAME = converter
 
