--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -6,14 +6,14 @@
 #    By: spitul <spitul@student.42berlin.de >       +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/13 17:47:50 by spitul            #+#    #+#              #
-#    Updated: 2025/07/11 16:23:41 by spitul           ###   ########.fr        #
+#    Updated: 2025/07/14 15:27:14 by spitul           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = ScalarConverter.cpp
+SRC = ScalarConverter.cpp main.cpp
 OBJ = $(addprefix obj/, $(SRC:.cpp=.o))
 CC = c++
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98 -pedantic
+CPPFLAGS = -g -Wall -Wextra -Werror -std=c++98 -pedantic
 HEADERS = ScalarConverter.hpp
 
 NAME = converter
