--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -6,15 +6,15 @@
 #    By: spitul <spitul@student.42berlin.de>        +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/06/13 17:47:50 by spitul            #+#    #+#              #
-#    Updated: 2025/07/16 21:16:46 by spitul           ###   ########.fr        #
+#    Updated: 2025/07/16 21:37:57 by spitul           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-SRC = main.cpp Serialize.cpp Data.cpp
+SRC = Serializer.cpp Data.cpp main.cpp
 OBJ = $(addprefix obj/, $(SRC:.cpp=.o))
 CC = c++
 CPPFLAGS = -g -Wall -Wextra -Werror -std=c++98 -pedantic
-HEADERS = Serialize.hpp Data.hpp
+HEADERS = Serializer.hpp Data.hpp
 
 NAME = serializer
 
